# v-wallet-api/Controllers/FinanceController.cs
@@ -1,5 +1,6 @@
 ﻿using System.Web.Http;
 using Microsoft.AspNetCore.Mvc;
+using v_wallet_api.Models;
 using v_wallet_api.Providers;
 using v_wallet_api.Services;
 using v_wallet_api.ViewModels;
@@ -57,17 +58,76 @@ namespace v_wallet_api.Controllers
             return Ok(createdTransaction);
         }
 
-        [Microsoft.AspNetCore.Mvc.HttpGet("{userId}/account")]
-        public async Task<IActionResult> GetAccounts([FromUri] string userId)
+        [Microsoft.AspNetCore.Mvc.HttpGet("{userProfileId}/account")]
+        public async Task<IActionResult> GetAccounts(string userProfileId)
         {
-            if (string.IsNullOrEmpty(userId))
+            if (string.IsNullOrEmpty(userProfileId))
             {
                 return BadRequest("Failed to load financial accounts");
             }
 
-            var financialAccounts = await _financeService.GetFinancialAccountsByUserId(userId);
+            var financialAccounts = await _financeService.GetFinancialAccountsByUserId(userProfileId);
 
             return Ok(financialAccounts);
+        }
+
+        [Microsoft.AspNetCore.Mvc.HttpPost("{userProfileId}/account")]
+        public async Task<IActionResult> CreateFinancialAccount(string userProfileId, [Microsoft.AspNetCore.Mvc.FromBody] FinancialAccountViewModel financialAccountVM)
+        {
+            if (string.IsNullOrEmpty(userProfileId))
+            {
+                return BadRequest("Invalid user profile Id");
+            }
+            try
+            {
+                var created = await _financeService.CreateFinancialAccount(userProfileId, financialAccountVM);
+                return Ok(created);
+
+            }
+            catch (KeyNotFoundException ex)
+            {
+                return BadRequest(ex.Message);
+            }        
+        }
+
+        [Microsoft.AspNetCore.Mvc.HttpPut("{userProfileId}/account")]
+        public async Task<IActionResult> UpdateFinancialAccount(string userProfileId, [Microsoft.AspNetCore.Mvc.FromBody] FinancialAccountViewModel financialAccountVM)
+        {
+            if (string.IsNullOrEmpty(userProfileId))
+            {
+                return BadRequest("Invalid user profile Id");
+            }
+            try
+            {
+                await _financeService.UpdateFinancialAccount(userProfileId, financialAccountVM);
+                return Ok();
+            }
+            catch (KeyNotFoundException ex)
+            {
+                return BadRequest(ex.Message);
+            }
+        }
+
+        [Microsoft.AspNetCore.Mvc.HttpDelete("{userProfileId}/account/{financialAccountId}")]
+        public async Task<IActionResult> DeleteFinancialAccount(string userProfileId, string financialAccountId)
+        {
+            if (string.IsNullOrEmpty(userProfileId))
+            {
+                return BadRequest("Invalid user profile Id");
+            }
+            if (string.IsNullOrEmpty(financialAccountId))
+            {
+                return BadRequest("Invalid financial account Id");
+            }
+            try
+            {
+                await _financeService.DeleteFinancialAccount(userProfileId, financialAccountId);
+                return Ok();
+            }
+            catch (KeyNotFoundException ex)
+            {
+                return BadRequest(ex.Message);
+            }
         }
     }
 }
