# v-wallet-api/ViewModels/FinancialAccountViewModel.cs
@@ -1,15 +1,33 @@
-﻿using System.Security;
+﻿using Swashbuckle.AspNetCore.Annotations;
+using System.ComponentModel.DataAnnotations;
+using System.Security;
 using v_wallet_api.Models;
 
 namespace v_wallet_api.ViewModels
 {
     public class FinancialAccountViewModel
     {
-        public string Id { get; set; }
+        [SwaggerSchema(ReadOnly = true, Title = "ID of the record", Description = "example: e1cb23d0-6cbe-4a29-b586-bfa424bc93fd")]
+
+        public string Id { get; set; } = string.Empty;
+
+        [Required]
         public string Name { get; set; }
+
+        [Required]
         public string Number { get; set; }
-        public FinancialAccountType Type { get; set; }
-        public string FinancialAccountType { get; set; }
+
+        [Required]
+        public string Type { get; set; }
+
+        [Required]
+        public string Currency { get; set; }
+
+        [SwaggerSchema(ReadOnly = true)]
         public decimal Balance { get; set; }
+
+        [SwaggerSchema(ReadOnly = true)]
+        public FinancialAccountType FinancialAccountType { get; set; } = new FinancialAccountType();
+
     }
 }
